--- a/docs/文远的面试准备/做题笔记.md
+++ b/docs/文远的面试准备/做题笔记.md
@@ -258,3 +258,98 @@ var arr = Array(3).fill({}) // [{}, {}, {}];
 arr[0].hi = "hi"; // [{ hi: "hi" }, { hi: "hi" }, { hi: "hi" }]
 ```
 
+
+
+## 16. NaN !== NaN , {} === {}
+
+**indexOf** 底层还是使用 === 进行判断，因为 NaN === NaN的结果为 false，所以使用 indexOf 查找不到 NaN 元素
+
+```javascript
+let a = {};
+a === a; // true
+let b = {};
+b === a; // false
+
+let b = NaN;
+b === b; // false
+
+// JavaScript专题之数组去重
+// https://github.com/mqyqingfeng/Blog/issues/27
+```
+
+
+
+## 17.数组去重
+
+**数组中含有对象**的时候，去重的方法就基本不能用了。
+
+小小去重也是真不容易啊
+
+参见文章：
+
+https://github.com/mqyqingfeng/Blog/issues/27
+
+```javascript
+// 最为全面的方法
+function unique(array) {
+    var obj = {};
+    return array.filter(function(item, index, array) {
+        // console.log(typeof item + JSON.stringify(item))
+        return obj.hasOwnProperty(typeof item + JSON.stringify(item)) ? false : (obj[typeof item + JSON.stringify(item)] = true)
+    })
+}
+
+let arr = [true, false, null, undefined, NaN, 0, 1, {}, {}, 'a', 'a', NaN];
+console.log(unique(arr));
+
+// JSON.stringify({})   {}
+// JSON.stringify(/a/) 正则表达式的话也是 {}
+var array = [{}, {}, /a/, /a/];
+// 结果 [ {} ]
+
+// 为了解决这个特别的情况，自己改写了一下。。。。
+function unique(array) {
+    var obj = {};
+    return array.filter(function(item, index, array) {
+        if (JSON.stringify(item) === '{}') {
+            return obj.hasOwnProperty(typeof item + JSON.stringify(item) + item.toString()) ? false : (obj[typeof item + JSON.stringify(item) + item.toString()] = true)
+        } else {
+            console.log(typeof item + JSON.stringify(item));
+            return obj.hasOwnProperty(typeof item + JSON.stringify(item)) ? false : (obj[typeof item + JSON.stringify(item)] = true)
+        }
+    })
+}
+```
+
+整理了一个列表，我们重点关注下对象和 NaN 的去重情况：
+
+| 方法               | 结果                                                         | 说明                              |
+| ------------------ | ------------------------------------------------------------ | --------------------------------- |
+| for循环            | [1, "1", null, undefined, String, String, /a/, /a/, NaN, NaN] | 对象和 NaN 不去重                 |
+| indexOf            | [1, "1", null, undefined, String, String, /a/, /a/, NaN, NaN] | 对象和 NaN 不去重                 |
+| sort               | [/a/, /a/, "1", 1, String, 1, String, NaN, NaN, null, undefined] | 对象和 NaN 不去重 数字 1 也不去重 |
+| filter + indexOf   | [1, "1", null, undefined, String, String, /a/, /a/]          | 对象不去重 NaN 会被忽略掉         |
+| filter + sort      | [/a/, /a/, "1", 1, String, 1, String, NaN, NaN, null, undefined] | 对象和 NaN 不去重 数字 1 不去重   |
+| 优化后的键值对方法 | [1, "1", null, undefined, String, /a/, NaN]                  | 全部去重                          |
+| Set                | [1, "1", null, undefined, String, String, /a/, /a/, NaN]     | 对象不去重 NaN 去重               |
+
+想了解为什么会出现以上的结果，看两个 demo 便能明白：
+
+```javascript
+// demo1
+var arr = [1, 2, NaN];
+arr.indexOf(NaN); // -1
+```
+
+`indexOf` 底层还是使用 === 进行判断，因为 `NaN === NaN`的结果为 false，所以使用 `indexOf` 查找不到 NaN 元素
+
+```javascript
+// demo2
+function unique(array) {
+   return Array.from(new Set(array));
+}
+console.log(unique([NaN, NaN])) // [NaN]
+```
+
+Set 认为尽管 `NaN === NaN` 为 false，但是这两个元素是重复的。
+
