--- a/docs/MyNote/findJob/找工作记录.md
+++ b/docs/MyNote/findJob/找工作记录.md
@@ -62,6 +62,16 @@
 
 ![远景一面](..\pics\远景智能一面.jpg)
 
+## 第一次拒绝笔试-2021-04-01
+
+愚人节中午，收到邮件，还以为有哪家公司又有了新的消息呢？
+
+结果又收到了携程的笔试邀请，说是今晚笔试？气，黑人问号。
+
+听师姐说是这样的，如果笔试没通过，会一次次发。
+
+拒绝了，也不差这一次笔试机会，有缘再会。
+
 ## 第一次进入二面环节-one day-😛
 
 **To be continue...**
