--- a/docs/MyNote/findJob/找工作记录.md
+++ b/docs/MyNote/findJob/找工作记录.md
@@ -72,6 +72,14 @@
 
 拒绝了，也不差这一次笔试机会，有缘再会。
 
-## 第一次进入二面环节-one day-😛
+## 第一次进入二面环节-2021-04-07-😛
+
+今天下午面试的兴业数金，晚上就收到了技术面通过的通知，效率还是挺高的，点赞！
+
+![兴业一面通过](..\pics\兴业一面通过.png)
+
+春招第一个进入二面的公司终于来了！据说二面就是 HR 面，许愿收到第一个 offer ！🙏
+
+
 
 **To be continue...**
