--- a/docs/MyNote/findJob/找工作记录.md
+++ b/docs/MyNote/findJob/找工作记录.md
@@ -80,6 +80,18 @@
 
 春招第一个进入二面的公司终于来了！据说二面就是 HR 面，许愿收到第一个 offer ！🙏
 
+## 第一次一面二面连着面-2021-04-12
 
+今天通过小红书工作的师兄内推了前端开发实习岗位，很快 HR 就打电话来约了面试，接到约面试电话的时候我就紧张了。跟 HR 说，工作日都可以面试，结果就直接约了今天下午三点面试。
+
+三点面试一开始的时候，电脑摄像头竟然用的是电脑后置的摄像头，我也是服了，场面一度陷入尴尬。
+
+一面的面试官看着很年轻，也蛮帅气的，问得问题都没有很难。后面写了一个算法题：反转链表，然后面完让我再等个十分钟进行二面。
+
+二面面试官一看气场就不一样，看起来就是一个大佬，后来问的很多问题我都没有回答好，只能说是学无止境了。
+
+反问二面面试官的时候问了他一些学习的东西，大佬的见解让我受益匪浅。说到了一些前端工程化的东西，还告诉我要去了解现在前端的一些新东西，对自己的未来有规划。
+
+二面实在比较难，offer 的话算是奢求了，许个愿吧！
 
 **To be continue...**
