春招记录完结

--- a/docs/MyNote/findJob/找工作记录.md
+++ b/docs/MyNote/findJob/找工作记录.md
@@ -94,4 +94,33 @@
 
 二面实在比较难，offer 的话算是奢求了，许个愿吧！
 
+4.13 收到了 OC！
+等待小红书正式邮件 offer 的过程还是挺煎熬的！
+
+## 第一次比较正式的 HR 面-2021-04-15
+
+今天面 OPPO 的 HR 面，感觉基本就是随机应变就好了，感觉表现还不错，应该能够拿到正式 offer 吧。
+
+静候通知！
+
+## 第一次收到 offer（春招结束）-2021-04-16
+
+总算是收到小红书正式的邮件 offer 了，跟 HR 约了下周三入职，悬着的心终于放下了。
+
+OPPO 那边虽然有机会拿到 offer，但毕竟是主要做测试的部门，并且只有基础薪资，去深圳实习的话没有租房补贴，总的来说还是去小红书更好一些。
+
+求职不易，笔试失败、面试失败，甚至是简历直接被筛掉，一路走来心态确实时好时坏，压力也会有，有时候觉都睡不好，也是挺难受的。但最终结果还是 OK 的呀，还是要对自己保持信心啊！
+
+一个月来的春招找实习也随着 offer 的到来宣布结束了，自己现在的水平能去小红书已经满足了，还有许多需要学习的地方，努力努力再努力。
+
+朋友里面看到加绒也是拿到了阿里的 offer，京京在蚂蚁跟字节之间选择了字节，五角场打工群里的三个人都有了打工的机会。想想身边的朋友这么优秀，自己又哪敢松懈呢！
+
+接下来打工、学习希望能够安排好，尽量做到两不误吧！
+
+
+
+
+
+秋招再战，仍需努力，加油吧！
+
 **To be continue...**
