--- a/docs/MyNote/findJob/找工作记录.md
+++ b/docs/MyNote/findJob/找工作记录.md
@@ -107,6 +107,8 @@
 
 总算是收到小红书正式的邮件 offer 了，跟 HR 约了下周三入职，悬着的心终于放下了。
 
+![小红书offer邮件](..\pics\小红书offer邮件.png)
+
 OPPO 那边虽然有机会拿到 offer，但毕竟是主要做测试的部门，并且只有基础薪资，去深圳实习的话没有租房补贴，总的来说还是去小红书更好一些。
 
 求职不易，笔试失败、面试失败，甚至是简历直接被筛掉，一路走来心态确实时好时坏，压力也会有，有时候觉都睡不好，也是挺难受的。但最终结果还是 OK 的呀，还是要对自己保持信心啊！
